; ModuleID = '/home/carl/AnghaBench/git/extr_environment.c_getenv_safe.c'
source_filename = "/home/carl/AnghaBench/git/extr_environment.c_getenv_safe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv_array = type { i8**, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.argv_array*, i8*)* @getenv_safe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @getenv_safe(%struct.argv_array* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.argv_array*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.argv_array* %0, %struct.argv_array** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = call i8* @getenv(i8* %7)
  store i8* %8, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %26

12:                                               ; preds = %2
  %13 = load %struct.argv_array*, %struct.argv_array** %4, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @argv_array_push(%struct.argv_array* %13, i8* %14)
  %16 = load %struct.argv_array*, %struct.argv_array** %4, align 8
  %17 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %16, i32 0, i32 0
  %18 = load i8**, i8*** %17, align 8
  %19 = load %struct.argv_array*, %struct.argv_array** %4, align 8
  %20 = getelementptr inbounds %struct.argv_array, %struct.argv_array* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = sub nsw i32 %21, 1
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8*, i8** %18, i64 %23
  %25 = load i8*, i8** %24, align 8
  store i8* %25, i8** %3, align 8
  br label %26

26:                                               ; preds = %12, %11
  %27 = load i8*, i8** %3, align 8
  ret i8* %27
}

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @argv_array_push(%struct.argv_array*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
